# francais-rouille

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.txt  STRUCTURE.md  index.html
.claude/skills/: create-chapter.md
B1_appart_texts/: 01_email_chauffage.md  01_email_chauffage_en.md  03_poste_courrier.md  03_poste_courrier.txt  04_avis_chien.txt  04_avis_chien_en.md  05_chat_perdu_en.md  06_fibre_syndic.md  06_fibre_syndic.txt
B1_appart_texts/html/: 01_email_chauffage.html  02_reparation_chauffage.html  03_poste_courrier.html  04_avis_chien.html  (+5 more)
B1_texts/: 01_paris_metro.txt  02_viennoiserie.txt  02_viennoiserie_en.md  03_directions_toulouse_en.md  04_annonce_appartement_en.md  05_appel_agence_en.md  06_discussion_quartier.txt  06_discussion_quartier_en.md  07_boulangerie.txt  07_boulangerie_en.md  08_taxi_hotel.txt  08_taxi_hotel_en.md  09_gallimard_evenement.txt  09_gallimard_evenement_en.md  10_rentree_cm2.md  10_rentree_cm2.txt  10_rentree_cm2_en.md  vocabulaire_b1.md
content/: CHARACTERS.md  site.toml
crates/site-gen/: Cargo.toml
crates/site-gen/src/: audio.rs  build.rs  dialog.rs  language.rs  lib.rs  typography.rs
docs/: CHAPTERS.md  CSP.md  FLAGS.md  INSTITUTIONS.md  TTS.md
scripts/: build.sh
shared/: crossword.css  crossword.js  quiz.css
site/: 404.css  404.html  _headers  index.html  robots.txt  sitemap.xml  style.css
src/: build.rs  dialog.rs  image.rs  main.rs  serve.rs  tts.rs  voice_report.rs
templates/: base.html  chapter_index.html  dialog.html  fragment.html  fragment_translation.html  site_index.html  translation.html
(+419 files in other folders)
