[package]
name = "francais-rouille"
version = "0.1.0"
edition = "2021"

[dependencies]
site-gen = { path = "crates/site-gen" }
image-strip = { path = "crates/image-strip" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
thiserror = "2"
rand = "0.9"
tera = "1"
tempfile = "3"
toml = "0.8"

# Local static-file dev server (`cargo run -- serve`).
tiny_http = "0.12"
mime_guess = "2"

[workspace]
members = [".", "crates/site-gen", "crates/image-strip"]
