[package]
name = "site-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
toml = "0.8"
rand = "0.9"

# Content-addressed audio: per-line hashes for cache validity. See audio.rs.
blake3 = "1"

[dev-dependencies]
tempfile = "3"
